--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,28 @@
 Package: mnis
 Type: Package
-Title: What the Package Does (Title Case)
+Title: An R package for downloading data from the Parliamentary Members Names Information Service
 Version: 0.1.0
-Author: Who wrote it
+Author: Noel Dempsey
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: This package provides functions for downloading data from the
+    Parliamentary Members Names Information Service. The core functions offer simple way to
+    send queries to the API endpoint and receive the results as a tibble 
+    with data converted to the approriate R data type.
+License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports:
+    dplyr,
+	httr,
+	jsonlite,
+	magrittr,
+	purrr,
+	readr,
+	rlang,
+	lubridate,
+	tidyr,
+	stringr,
+	tibble
 Suggests: 
     testthat
+RoxygenNote: 7.1.1
