RMD check fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,5 +20,6 @@ export(fetch_mps_parliamentary_roles)
 export(fetch_mps_party_memberships)
 export(get_general_elections)
 export(get_general_elections_list)
+importFrom(data.table,":=")
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
