--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: clmnis
 Type: Package
 Title: An R package for downloading data from the Parliamentary Members Names Information Service
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: 
     person(
         given = "Noel",
@@ -9,9 +9,9 @@ Authors@R:
         role = c("aut", "cre"),
         email = "noel.dempsey@outlook.com")
 Description: This package provides functions for downloading data from the
-    Parliamentary Members Names Information Service. The core functions offer simple way to
-    send queries to the API endpoint and receive the results as a tibble 
-    with data converted to the approriate R data type.
+    Parliamentary Members Names Information Service. The core functions offer 
+    simple way to send queries to the API endpoint and receive the results as a 
+    tibble with data converted to the approriate R data type.
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
