--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(fetch_commons_memberships)
 export(fetch_lords)
+export(fetch_lords_addresses)
 export(fetch_lords_contested_elections)
 export(fetch_lords_government_roles)
 export(fetch_lords_maiden_speeches)
@@ -11,6 +12,7 @@ export(fetch_lords_other_parliaments)
 export(fetch_lords_parliamentary_roles)
 export(fetch_lords_party_memberships)
 export(fetch_mps)
+export(fetch_mps_addresses)
 export(fetch_mps_contested_elections)
 export(fetch_mps_government_roles)
 export(fetch_mps_maiden_speeches)
